--- a/main.tex
+++ b/main.tex
@@ -424,7 +424,7 @@ Our work remains ongoing, and we envisage two areas for further development (1) 
 \begin{figure}
 %\vspace*{0.1in}   %%% FIGURE 0
 \begin{center}
-\includegraphics[width=\columnwidth]{diagram.png}
+\includegraphics[width=6cm]{diagram.png}
 \end{center}
 \vspace{0.25in}
 \hspace*{3in}
@@ -440,15 +440,18 @@ Our work remains ongoing, and we envisage two areas for further development (1) 
 %\vspace*{0.1in}   %%% FIGURE 1
 \begin{center}
 %\includegraphics[width=0.2\columnwidth,keepaspectratio=true]{cc.eps}
-\includegraphics[width=8cm]{ch3.png}
-\includegraphics[width=8cm]{pseudoch3.png}
-\includegraphics[width=8cm]{tm_sp2_potentials.png}
+%\includegraphics[width=8cm]{ch3.png}
+%\includegraphics[width=8cm]{pseudoch3.png}
+%\includegraphics[width=8cm]{tm_sp2_potentials.png}
+\includegraphics[width=8cm]{scheme_complete.eps}
 %\caption{Diagrams of CH\(^{\bullet}_{3}\) (left) and pseudo-CH\(^{\bullet}_{3}\) (right, below) molecules. The pseudo-CH\(^{\bullet}_{3}\) diagrams display the \(s\) and \(p\)-potential positions, and the distances \(d\) and \(c\).}
 %\label{figure:ref_pseudo_diagram}
 \end{center}
-\vspace{0.25in}
-\hspace*{3in}
-\caption{Diagrams of CH\(^{\bullet}_{3}\) (left) and pseudo-CH\(^{\bullet}_{3}\) (right, below) molecules. The pseudo-CH\(^{\bullet}_{3}\) diagrams display the \(s\) and \(p\)-potential positions, and the distances \(d\) and \(c\).}
+\caption{Diagrams of the planar CH\(^{\bullet}_{3}\) radical (left) and the pseudo-C\(^{\bullet}\) (right)
+used to mimic the p$_z$ orbital.
+The mono occupied p$_z$ orbital is represented in gray.
+The pseudo-C\(^{\bullet}\) diagram displays the \(s\) and \(p\)-potentials in blue,
+and the distances \(d\) and \(c\).}
 \label{figure:ref_pseudo_diagram}
 \end{figure}
 
