--- a/main.tex
+++ b/main.tex
@@ -12,9 +12,7 @@
 \usepackage{caption}
 \usepackage{color}% Include colors for document elements
 \usepackage{dcolumn}% Align table columns on decimal point
-\usepackage{bm}% bold math
 \usepackage[numbers,super,comma,sort&compress]{natbib}
-%\usepackage[nolists, nomarkers, figuresfirst]{endfloat}
 
 \usepackage{soul}
 
@@ -31,7 +29,7 @@
 
 
 \begin{abstract}
-A pseudo-potential system for an sp\(^{2}\) carbon atom is built and tested as a building block for various pseudo-hydrocarbon chain and ring systems.  
+A pseudo-potential system for an sp\(^{2}\) carbon atom is built and tested as a building block for various pseudo-hydrocarbon polyenes and polycyclic aromatic hydrocarbons.  
 This pseudo-system has a central charge of $Z=1$, it contains only one electron. It is employed in \textsl{ab-initio} calculations in which several physical characteristics including the orbital energies and first ionisation energy, as well as first excitation energy and UV spectra, are found to be well-reproduced by the pseudo-system. This approach is capable of reproducing the $\pi$ electron systems of small or large, planar hydrocarbons at low computational cost.
 \end{abstract}
 
@@ -45,7 +43,6 @@ This pseudo-system has a central charge of $Z=1$, it contains only one electron.
 
 \renewcommand{\baselinestretch}{1.5}
 \normalsize
-
 
 \clearpage
 
@@ -236,53 +233,72 @@ computational details for further information).
 
 \subsection*{\sffamily \large Applications}
 
-\subsubsection*{\sffamily \large C\(\mathbf{_{2n}}\)H\(\mathbf{_{2n+2}}\), \(\mathbf{2 \leq n \leq 12}\)}
+\subsubsection*{\sffamily \large All trans polyenes}
 
-Taking the final potentials, we test them against a series of chain alkenes up to length C\(_{12}\)H\(_{14}\), using a variety of functionals. In each case, the geometry of the all-electron system is optimised according to the method (HF or DFT functional) used, before taking the this geometry and applying the final pseudo-potentials from Table \ref{table:potential_params}. 
-Figures \ref{fig:alkenes_hf_dft} and \ref{fig:alkenes_tddft} show the results. Table \ref{table:alkene_errors} gives a breakdown of the percentage errors for each method across all molecules tested. The pattern of increasing HOMO energy and decreasing cation-singlet and triplet-singlet energies seen in the reference systems is well replicated by the pseudo-alkenes, with the energies following the same gradient.
+Taking the final potentials, we test them against a series of all trans polyenes up to length C\(_{100}\)H\(_{102}\).
 
-We also compare TD-DFT results for this system and results of a previous work of some of the authors, which match to within 3\%.\cite{drujon_pseudopotentials_2013}
+In order to check how the pseudo potentials behave with different functionals, we did a survey of four functionals plus Hartree Fock.
+Table \ref{table:alkene_errors} gives a breakdown of the percentage errors for each method across all molecules tested.
+As one could expect, the pseudo potentials are in better agreement with the reference calculations
+in the Hartree Fock framework as it is the method used for extraction.
+The agreement is also very good with the hybrid PBE0 functional and we shall use this functional
+in the rest of this article as it is more likely to be used in actual cases than pure Hartree Fock.
+
+Figure \ref{fig:alkenes_hf_dft} show in detail the results obtained with the smaller polyenes.
+The pattern of increasing HOMO energy and decreasing cation-singlet and triplet-singlet energies seen in the reference systems is well replicated by the pseudo-alkenes, with the energies following the same gradient.
+We also compare TD-DFT results for this system and results of a previous work of some of the authors, which match to within 3\% (see SI).\cite{drujon_pseudopotentials_2013}
 Let us recall here that in our previous work potentials were placed at the center of bonds, meaning that the pseudo-potentials generated, whilst effective, were time-consuming to set up for each molecule.
-
-\subsubsection*{\sffamily \large Large Systems}
-
-The potentials derived above are also tested on larger systems.
-Figure \ref{fig:rings_graphs} shows the $\Delta_{ST}$, the IE and
-HOMO energy values for several Polycyclic Aromatic Hydrocarbon (PAH) systems.
-As with the short chain alkenes, the general trend of the results is well-replicated
-by the pseudo-systems, and the percentage errors, displayed in Table
-\ref{table:ring_system_errors}, are similar.
 
 Figure~\ref{fig:long_chain_graphs} and Table \ref{table:long_alkene_errors} refer to longer 
 alkene chains (\(n\) up to 100).
-The pattern of decreasing ionisation potentials and $\Delta_{ST}$ with increasing HOMO
-energy is still followed, with the absolute error remaining consistent.
-However, differences in the triplet-singlet energies between the reference and pseudo-systems 
-become significant, notably for the largest case.
+As for the smaller chains, the properties of large all trans polyenes are well reproduced,
+which indicates that the results do not degrade with the size of the system.
+In the larger polyenes, spin contamination is non negligible neither in the reference, 
+nor in the pseudo potential calculations and the $\Delta_{ST}$ approach
+is not viable as it is for small polyenes (see SI).
+Thus, the computation of the excited state has to be done through TD-DFT, which leads to an
+excellent agreement between full electron and pseudo potential calculations.
 
-Unlike for the previous systems, there is a large discrepancy between $\Delta_{ST}$
-and TD-DFT results. The pseudo-system TD-DFT results match the reference systems well, but the $\Delta_{ST}$ results do not.
-The reason for this failure is to be found in the representation of the triplet state. The expectation values of the $S^2$ operator for the triplet calculations
-are plotted in Figure \ref{fig:ssquare}, which shows that the spin contamination
-of the triplet state computed as a single configuration (\emph{i.e.} in a SCF
-framework) increases in both reference and pseudo-potential cases.
-Yet, this effect is strengthened in the pseudo-potential calculations.
-These results suggest that the triplet state cannot be represented as one configuration
-but as a linear combination of mono-electronic excitations as done through TD-DFT.
+\subsubsection*{\sffamily \large Polycyclic aromatic hydrocarbons}
 
-In order to show that the recovering of the agreement between the pseudo-potential
-and the reference calculations is not an artefact, we give in Table~\ref{tab:coef}
-the weight and nature of each excitation (weight larger than 3\%)
-in the description of the triplet excited state for
-C$_{50}$H$_{52}$ (other values can be found in the SI, which exhibit the same trends).
-As can be seen, the agreement is very good. 
+The potentials derived above are also tested on polycyclic aromatic hydrocarbons
+in order to chek if they are able to reproduce the effect of aromaticity.
+This is particularly critical as the system used for the extraction, ethylene, has no such feature.
+Figure \ref{fig:rings_graphs} shows the excitation energies, the IE and
+HOMO energy values for several Polycyclic Aromatic Hydrocarbon (PAH) systems.
+As with the polyenes, the general trend of the results is well-replicated
+by the pseudo-systems, and the percentage errors, displayed in Table
+\ref{table:ring_system_errors}, are similar.
+This is not as surprising as it could sound as aromaticity arises from the fact that
+the $p$ orbitals overlap and are forming a ring.
+As both these requirements are fulfilled, the aromatic character of the $pi$ ring
+appears.
+
+%However, differences in the triplet-singlet energies between the reference and pseudo-systems 
+%become significant, notably for the largest case.
+%
+%Unlike for the previous systems, there is a large discrepancy between $\Delta_{ST}$
+%and TD-DFT results. The pseudo-system TD-DFT results match the reference systems well, but the $\Delta_{ST}$ results do not.
+%The reason for this failure is to be found in the representation of the triplet state. The expectation values of the $S^2$ operator for the triplet calculations
+%are plotted in Figure \ref{fig:ssquare}, which shows that the spin contamination
+%of the triplet state computed as a single configuration (\emph{i.e.} in a SCF
+%framework) increases in both reference and pseudo-potential cases.
+%Yet, this effect is strengthened in the pseudo-potential calculations.
+%These results suggest that the triplet state cannot be represented as one configuration
+%but as a linear combination of mono-electronic excitations as done through TD-DFT.
+%
+%In order to show that the recovering of the agreement between the pseudo-potential
+%and the reference calculations is not an artefact, we give in Table~\ref{tab:coef}
+%the weight and nature of each excitation (weight larger than 3\%)
+%in the description of the triplet excited state for
+%C$_{50}$H$_{52}$ (other values can be found in the SI, which exhibit the same trends).
+%As can be seen, the agreement is very good. 
 
 The previous calculations show that the pseudo-potentials that we have extracted
 are able to reproduce the low-lying first excited state as well as the ionisation potential
 of a large range of PAH.
 
 Encouraged by this, we decided to explore the virtual space further by computing a large number of $\pi$ excited states, and to compare the results to all-electron calculations using the PBE0 functional. As can be seen from Figure~\ref{fig:cnhn_uv}, which compares the absorption spectra of pseudo-potential and all-electron calculations for a selection of PAH, the shape of the spectra is well-reproduced. A red-shift of factor 1.15 is applied to the pseudo-potential systems to align them with their all-electron counterparts. We can see from the fit of the pairs of spectra that the scaling generates a near-perfect absorption curve across all systems.
-%, making it something we believe we could fix with a better optimised potential.
 
 These results show that the pseudo-potentials that we have extracted are able to reproduce the
 $\pi$ systems in a variety of situations which are not part of their extraction set.
@@ -373,7 +389,7 @@ supporting the idea that the $p$ potential retrieves the incomplete screening ef
 
 All Hartree-Fock, DFT and time-dependent DFT (TD-DFT) energy calculations are performed with TURBOMOLE 7.1 \cite{TURBOMOLE}. The basis set used throughout is def-SV(P) \cite{defsvp}. Wherever possible, planar (C\(_{S}\)) symmetry is used. The convergence energy is \(10^{-7}\)H (\texttt{\$scfconv = 7}) for SCF and \(10^{-6}\)H for DFT. All optimisations used the Brent method in SciPy's optimisation library, with a tolerance of \(1.48*10^{-08}\), and used standard Hartree-Fock calculations.\cite{scipy}
 
-\textbf{Chain Alkenes, Ring Molecules}. In additional to Hartree-Fock calculations, DFT is used with PBE0, PBE, TPSS and TPSSh functionals. \cite{pbe0,pbe,tpss,tpssh} The integration grid size is set at \(m4\). Also used are TD-DFT calculations, where the Tamm-Dancoff approximation (CIS) \cite{tammdancoff} is switched on to avoid triplet instability.
+\textbf{Chain Alkenes, Polycyclic Aromatic Hydrocarbons}. In additional to Hartree-Fock calculations, DFT is used with PBE0, PBE, TPSS and TPSSh functionals. \cite{pbe0,pbe,tpss,tpssh} The integration grid size is set at \(m4\). Also used are TD-DFT calculations, where the Tamm-Dancoff approximation (CIS) \cite{tammdancoff} is switched on to avoid triplet instability.
 
 \section*{\sffamily \Large CONCLUSION AND PERSPECTIVE}
 
@@ -383,7 +399,7 @@ Their main features are that:
 (2) We could show that not only were the occupied orbitals well-reproduced by the use of these new potentials, but also that the virtual space is of good quality for excited states calculation. 
 They are able to reproduce basic electronic properties including HOMO, 1$^{st}$ ionisation and singlet-triplet gap energies, as well as reproduce physically reasonable absorption spectra. 
 (3) They can be employed with both Hartree-Fock and DFT methods including PBE0, PBE, TPSS and TPSSh functionals. 
-(4) They have been shown to function well whether their neighbouring atoms are other pseudo-carbons (as with fused carbon rings), hydrogen atoms (as in CH\(^{\bullet}_{3}\)), or a mixture of both (as in the chain alkenes or at the edge of fused ring systems). 
+(4) They have been shown to function well whether their neighbouring atoms are other pseudo-carbons (as with fused carbon rings), hydrogen atoms (as in CH\(^{\bullet}_{3}\)), or a mixture of both (as in the polyenes or at the edge of fused ring systems). 
 (5) They offer a significant gain in computational time as compared to all-electron calculations.
 
 Our work remains ongoing, and we envisage two areas for further development (1) We would like to create potentials that can successfully interact with neighbouring all-electron atoms. This will mean producing potentials which are capable of bonding covalently with their neighbours, i.e. adding another electron to the pseudo-carbon for every bonding, all-electron neighbouring atom. Such potentials could be useful as link atoms in QM/MM calculations, functioning similarly to Quantum Capping Potentials \cite{dilabio_simple_2002}, though this is not our primary motivation. (2) We would like further to test and to expand this work into a general method for increasing computational efficency in large systems in which there are many sp$^{2}$ carbon units, both in SCF calculations and the generation of electronic spectra. This could be particularly useful in large molecules which are optically active, such as helicenes, to simulate ECD spectra.
@@ -474,41 +490,58 @@ and the distances \(d\) and \(c\).}
 \begin{figure}
 %\vspace*{0.1in}   %%% FIGURE 3
 \begin{center}
+\includegraphics[width=8cm]{short_pbe0_tddft}
 \includegraphics[width=8cm]{short_pbe0_homo}
 \includegraphics[width=8cm]{short_pbe0_ie}
-\includegraphics[width=8cm]{short_pbe0_st}
+%\includegraphics[width=8cm]{short_pbe0_st}
 %\caption{DFT (PBE0) comparison of reference and pseudo-system energies across a range of chain alkenes.}
-%\label{fig:alkenes_hf_dft}
+\caption{DFT and TD-DFT (PBE0) comparison of all-electron and pseudo-system energies across a range of
+polyenes.}
+\label{fig:alkenes_hf_dft}
+\end{center}
+\vspace{0.25in}
+\hspace*{3in}
+\end{figure}
+
+% \begin{figure}
+% %\vspace*{0.1in}   %%% FIGURE 4
+% \begin{center}
+% \includegraphics[width=8cm]{short_pbe0_tddft_2013}
+% \includegraphics[width=8cm]{short_pbe0_tddft}
+% %\caption{Comparison of pseudo-alkenes with previous\cite{drujon_pseudopotentials_2013} and current potentials using TD-DFT excitation energies.}
+% %\label{fig:alkenes_tddft}
+% \end{center}
+% \vspace{0.25in}
+% \hspace*{3in}
+% 
+% \caption{Comparison of pseudo-alkenes with previous\cite{drujon_pseudopotentials_2013} and current potentials using TD-DFT excitation energies.}
+% \label{fig:alkenes_tddft}
+% \end{figure}
+
+\begin{figure}
+%\vspace*{0.1in}   %%% FIGURE 5
+\begin{center}
+%\includegraphics[width=8cm]{long_pbe0_st}
+\includegraphics[width=8cm]{long_pbe0_tddft}
+\includegraphics[width=8cm]{long_pbe0_ie}
+\includegraphics[width=8cm]{long_pbe0_homo}
+%\caption{DFT and TD-DFT (PBE0) comparison of reference and pseudo-system energies across a range of long chain alkenes (C\(_{20}\)-C\(_{100}\)).}
+%\label{fig:long_chain_graphs}
 \end{center}
 \vspace{0.25in}
 \hspace*{3in}
 
-\caption{DFT (PBE0) comparison of all-electron and pseudo-system energies across a range of chain alkenes.}
-\label{fig:alkenes_hf_dft}
+\caption{DFT and TD-DFT (PBE0) comparison of all-electron and pseudo-system energies across a range of long polyenes (C\(_{20}\)-C\(_{100}\)).}
+\label{fig:long_chain_graphs}
 \end{figure}
 
 \begin{figure}
 %\vspace*{0.1in}   %%% FIGURE 4
 \begin{center}
-\includegraphics[width=8cm]{short_pbe0_tddft_2013}
-\includegraphics[width=8cm]{short_pbe0_tddft}
-%\caption{Comparison of pseudo-alkenes with previous\cite{drujon_pseudopotentials_2013} and current potentials using TD-DFT excitation energies.}
-%\label{fig:alkenes_tddft}
-\end{center}
-\vspace{0.25in}
-\hspace*{3in}
-
-\caption{Comparison of pseudo-alkenes with previous\cite{drujon_pseudopotentials_2013} and current potentials using TD-DFT excitation energies.}
-\label{fig:alkenes_tddft}
-\end{figure}
-
-\begin{figure}
-%\vspace*{0.1in}   %%% FIGURE 5
-\begin{center}
-\includegraphics[width=8cm]{ring_pbe0_st}
+%\includegraphics[width=8cm]{ring_pbe0_st}
+\includegraphics[width=8cm]{ring_pbe0_tddft}
 \includegraphics[width=8cm]{ring_pbe0_ie}
 \includegraphics[width=8cm]{ring_pbe0_homo}
-\includegraphics[width=8cm]{ring_pbe0_tddft}
 %\includegraphics[width=5cm]{19_ring_diagram}
 \fbox{\includegraphics[width=5cm]{c54h18}}
 %\caption{DFT and TD-DFT (PBE0) comparison of reference and pseudo-system energies across a range of ring molecules. 
@@ -523,41 +556,24 @@ C\(_{54}\)H\(_{18}\) is shown in the bottom.}
 \label{fig:rings_graphs}
 \end{figure}
 
+% \begin{figure}
+% %\vspace*{0.1in}   %%% FIGURE 6
+% \begin{center}
+% \includegraphics[width=8cm]{long_pbe0_s2}
+% %\caption{Comparison of $S^2$ expectation values obtained for the calculation
+% %of the first triplet configuration in a SCF formalism, for reference
+% %and pseudo-systems.}
+% %\label{fig:ssquare}
+% \end{center}
+% \vspace{0.25in}
+% \hspace*{3in}
+% \caption{Comparison of $S^2$ expectation values obtained for the calculation
+% of the first triplet configuration in a SCF formalism, for all-electron and pseudo-systems.}
+% \label{fig:ssquare}
+% \end{figure}
+
 \begin{figure}
 %\vspace*{0.1in}   %%% FIGURE 6
-\begin{center}
-\includegraphics[width=8cm]{long_pbe0_st}
-\includegraphics[width=8cm]{long_pbe0_ie}
-\includegraphics[width=8cm]{long_pbe0_homo}
-\includegraphics[width=8cm]{long_pbe0_tddft}
-%\caption{DFT and TD-DFT (PBE0) comparison of reference and pseudo-system energies across a range of long chain alkenes (C\(_{20}\)-C\(_{100}\)).}
-%\label{fig:long_chain_graphs}
-\end{center}
-\vspace{0.25in}
-\hspace*{3in}
-
-\caption{DFT and TD-DFT (PBE0) comparison of all-electron and pseudo-system energies across a range of long chain alkenes (C\(_{20}\)-C\(_{100}\)).}
-\label{fig:long_chain_graphs}
-\end{figure}
-
-\begin{figure}
-%\vspace*{0.1in}   %%% FIGURE 7
-\begin{center}
-\includegraphics[width=8cm]{long_pbe0_s2}
-%\caption{Comparison of $S^2$ expectation values obtained for the calculation
-%of the first triplet configuration in a SCF formalism, for reference
-%and pseudo-systems.}
-%\label{fig:ssquare}
-\end{center}
-\vspace{0.25in}
-\hspace*{3in}
-\caption{Comparison of $S^2$ expectation values obtained for the calculation
-of the first triplet configuration in a SCF formalism, for all-electron and pseudo-systems.}
-\label{fig:ssquare}
-\end{figure}
-
-\begin{figure}
-%\vspace*{0.1in}   %%% FIGURE 8
 \begin{center}
 \includegraphics[width=12cm,angle=270]{cnhn_uv}
 \end{center}
@@ -762,7 +778,7 @@ final pseudo-C$_{2}$H$_{4}$ & -3.910 & 0.624 & 1.500 & 0.500 & -10.062 & -3.533 
 \newpage
 
 \begin{table}[h]
-\caption{\%-errors across calculation types for short chain alkenes  (C\(_{2}\)-C\(_{12}\))}
+\caption{\%-errors across calculation types for short polyenes (C\(_{2}\)-C\(_{12}\))}
 \begin{tabular}{c c c c c c }
 \hline
 Calculation Type & HF & PBE0 & PBE & TPSS & TPSSh \\
@@ -779,7 +795,7 @@ Mean TD-DFT Excitation error (\%) & - & 2.6 & - & - & - \\
 \newpage
 
 \begin{table}[h]
-\caption{\%-errors across calculation types for ring-systems}
+\caption{\%-errors across calculation types for PAH}
 \begin{tabular}{c c c c c c }
 \hline
 Calculation Type & HF & PBE0 & PBE & TPSS & TPSSH \\
@@ -796,7 +812,7 @@ Mean TD-DFT Excitation error (\%) & - & 0.099 & - & - & - \\
 \newpage
 
 \begin{table}[h]
-\caption{\%-errors across calculation types for long chain alkenes (C\(_{20}\)-C\(_{100}\))}
+\caption{\%-errors across calculation types for long polyenes (C\(_{20}\)-C\(_{100}\))}
 \begin{tabular}{c c c c c c }
 \hline
 Calculation Type & HF & PBE0 & PBE & TPSS & TPSSH \\
